--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -33,13 +33,8 @@ nav ul{
     transition: all 1s ease;
     text-align: center;
   }
-  nav ul li a.active,
-  nav ul li a:hover{
-    color: rgb(247, 245, 245);
-    background: rgb(79, 79, 79);
-    
-    
-  }
+
+  
   .aldoilea{
 background-color: white;
  position: absolute;
@@ -54,16 +49,60 @@ background-color: white;
     background-color: black;
     color:#070707;
 
-
-
-
-
-
-
-
   }
   
   img{
     height: 50px;
     width: 50px;
   }
+   .altreilea{
+    margin-top: 10px;
+   }
+   .line{
+    border:solid  1px rgb(182, 181, 181);
+    margin-top: 50px;
+    position: absolute;
+    width:1050px;
+
+   }
+
+   @media screen and (max-width: 380px) {
+    body{
+
+      margin:0px
+    }
+
+    ul {
+        position: relative;
+        width: 100%;
+          height:1000px;
+    }
+li{
+        position: relative;
+        width: 100%;
+          height:1000px;
+    }
+
+
+
+      .line{
+   display: none;
+
+   }
+
+
+    .just-navigation{
+      /* margin: 0 auto; is a great trick for centering */
+    
+      
+     
+      height:1000px;
+    }
+    
+    /* remove the set width on your items
+    could also set to width: 100%, which would be in line
+    with general responsive practices */
+    .navigationfirst {
+      width: initial;
+    }
+}
