--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -1,139 +1,193 @@
-*{
-    margin:0;
-    padding:0
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+
 }
-h1{  
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-    /* position: absolute; */
-    margin:0;
+
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* position: absolute; */
+  margin: 0;
 }
-nav ul{
-    
-    margin:0;
-    /* margin-left: 800;
+
+nav ul {
+  margin: 0;
+  /* margin-left: 800;
     margin-right: 0px; */
-    position:absolute;
-    /* text-align: right; */
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
+  position: absolute;
+  /* text-align: right; */
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+nav ul li {
+  margin: 0 10px;
+}
+
+nav ul li a {
+  color: #070707;
+  /* padding: 8px 15px; */
+  border-radius: 10px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  transition: all 1s ease;
+  text-align: center;
+}
+
+.aldoilea {
+  background-color: white;
+  position: absolute;
+  margin-left: 850px;
+}
+
+.just-navigation {
+  margin: 0px;
+  margin-top: 5px;
+  margin-left: 150px;
+  margin-right: 150px;
+  background-color: black;
+  color: #070707;
+}
+
+img {
+  height: 50px;
+  width: 50px;
+}
+
+.altreilea {
+  margin-top: 10px;
+}
+
+.line {
+  border: solid 1px rgb(182, 181, 181);
+  margin-top: 50px;
+  position: absolute;
+  width: 1050px;
+
+}
+
+@media screen and (max-width: 380px) {
+  body {
+
+    margin: 0px
   }
-  nav ul li{
-    margin: 0 10px;
-  }
-  nav ul li a{
-    
-    color: #070707;
-    /* padding: 8px 15px; */
-    border-radius: 10px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
-    transition: all 1s ease;
-    text-align: center;
+
+  ul {
+    position: relative;
+    width: 100%;
+    height: 1000px;
   }
 
-  
-  .aldoilea{
-background-color: white;
- position: absolute;
- margin-left: 850px;
-
+  li {
+    position: relative;
+    width: 100%;
+    height: 1000px;
   }
-  .just-navigation{
-    margin:0px;
-    margin-top: 5px;
-    margin-left: 150px;
-    margin-right: 150px;
-    background-color: black;
-    color:#070707;
 
+  .line {
+    display: none;
   }
-  
-  img{
-    height: 50px;
-    width: 50px;
+
+  .just-navigation {
+    /* margin: 0 auto; is a great trick for centering */
+    height: 1000px;
   }
-   .altreilea{
-    margin-top: 10px;
-   }
-   .line{
-    border:solid  1px rgb(182, 181, 181);
-    margin-top: 50px;
-    position: absolute;
-    width:1050px;
 
-   }
-
-   @media screen and (max-width: 380px) {
-    body{
-
-      margin:0px
-    }
-
-    ul {
-        position: relative;
-        width: 100%;
-          height:1000px;
-    }
-li{
-        position: relative;
-        width: 100%;
-          height:1000px;
-    }
-      .line{
-   display: none;
-
-   }
-
-
-    .just-navigation{
-      /* margin: 0 auto; is a great trick for centering */
-    
-      
-     
-      height:1000px;
-    }
-    
-    /* remove the set width on your items
+  /* remove the set width on your items
     could also set to width: 100%, which would be in line
     with general responsive practices */
-    .navigationfirst {
-      width: initial;
-    }
-}     
+  .navigationfirst {
+    width: initial;
+  }
+}
 
-
-.parttho-buton {
- border-radius: 10px;
-   text-align: center;
- transition: all 1s ease;
+/*  asta ii partea doua a nagigatie cea de jos 
+orcum mai am de facut  */
+.alpatrulea {
+  border-radius: 10px;
+  text-align: center;
+  transition: all 1s ease;
   text-decoration: none;
-position: fixed;
+  position: fixed;
 }
 
 
 
+body {
+  background: #fffcfc;
+  font-family: "Montserrat", sans-serif;
 
+}
 
+.navMenu {
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
 
+.navMenu a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: inline-block;
+  width: 80px;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
 
+.navMenu a:hover {
+  color: #070707;
+}
 
+.navMenu .dot {
+  width: 6px;
+  height: 6px;
+  background: #000000;
+  border-radius: 50%;
+  opacity: 0;
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
 
+.navMenu a:nth-child(1):hover~.dot {
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
 
+.navMenu a:nth-child(2):hover~.dot {
+  -webkit-transform: translateX(110px);
+  transform: translateX(110px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
 
+.navMenu a:nth-child(3):hover~.dot {
+  -webkit-transform: translateX(200px);
+  transform: translateX(200px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.navMenu a:nth-child(4):hover~.dot {
+  -webkit-transform: translateX(285px);
+  transform: translateX(285px);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  opacity: 1;
+}
