--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -52,7 +52,38 @@ nav ul li a {
   margin-right: 150px;
   background-color: black;
   color: #070707;
+    top: 10%;
+  left: 70%;
 }
+@media screen and (max-width: 1400px) {
+.just-navigation {
+  margin: 0px;
+  margin-top: 5px;
+  margin-left: 150px;
+  margin-right: 150px;
+  background-color: black;
+  color: #070707;
+
+}
+}
+@media screen and (min-width: 1400px) {
+.just-navigation {
+  margin: 0px;
+  margin-top: 5px;
+  margin-left: 350px;
+  margin-right: 150px;
+  background-color: black;
+  color: #070707;
+
+}
+.Nameweb {
+    margin: 60px 60px 60px 360px;
+    font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
+    position: absolute;
+}
+
+}
+
 
 img {
   height: 50px;
@@ -202,3 +233,11 @@ margin-left: 150px;
 
 
 }
+
+/*  cea de mai sus este doar navigaia nu umbla la ia 
+ */
+
+
+
+
+
