--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
 
 }
+body{
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
 
 h1 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -52,40 +55,45 @@ nav ul li a {
   margin-right: 150px;
   background-color: black;
   color: #070707;
-    top: 10%;
+  top: 10%;
   left: 70%;
 }
+
 @media screen and (max-width: 1400px) {
-.just-navigation {
-  margin: 0px;
-  margin-top: 5px;
-  margin-left: 150px;
-  margin-right: 150px;
-  background-color: black;
-  color: #070707;
+  .just-navigation {
+    margin: 0px;
+    margin-top: 5px;
+    margin-left: 150px;
+    margin-right: 150px;
+    background-color: black;
+    color: #070707;
 
+  }
 }
-}
-@media screen and (min-width: 1400px) {
-.just-navigation {
-  margin: 0px;
-  margin-top: 5px;
-  margin-left: 350px;
-  margin-right: 150px;
-  background-color: black;
-  color: #070707;
 
-}
-.Nameweb {
-    margin: 60px 60px 60px 360px;
+/*  ba vezi ca asta ii pentru aia sti tu  adica pentru laptop  
+ */
+@media screen and (min-width: 1450px) {
+  .just-navigation {
+    margin: 0px;
+    margin-top: 5px;
+    margin-left: 320px;
+    margin-right: 150px;
+    background-color: black;
+    color: #070707;
+
+  }
+
+  .Nameweb {
+    margin: 60px 60px 60px 300px;
     font-family: Trebuchet MS, Lucida Sans Unicode, Lucida Grande, Lucida Sans, Arial, sans-serif;
     position: absolute;
-}
+  }
 
 }
 
 
-img {
+.imger {
   height: 50px;
   width: 50px;
 }
@@ -222,11 +230,12 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: 1;
 }
-.Nameweb{
-font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-position: absolute;
-margin:60px;
-margin-left: 150px;
+
+.Nameweb {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  position: absolute;
+  margin: 60px;
+  margin-left: 150px;
 
 
 
@@ -237,7 +246,26 @@ margin-left: 150px;
 /*  cea de mai sus este doar navigaia nu umbla la ia 
  */
 
+/* de aicia in jos ii doar web incepand cu tot ce contine in divul conatiner  */
 
 
+.imge {
+  width: 100%;
+  height: 400px;
+  top: 30%;
+  margin-top: 110px;
 
-
+}
+.conatienr-tho{
+  position:absolute;
+  top:35%;
+  left:20%;
+  color:#ffffff
+}
+.container-header{
+  font-size: 40px;
+ font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+.container-paragraf{
+font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
