--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -354,7 +354,7 @@ in domeniu  */
 left:25%;
 padding-bottom: 50px;
 background-color: #d0d0d0;
-border-radius:54% 46% 52% 48% / 7% 100% 0% 93%  ;
+border-radius: 10px;
 padding-top: 50px;
 padding-left: 250px;
 padding-right: 250px;
