--- a/style/Introduction.aboutus.design.css
+++ b/style/Introduction.aboutus.design.css
@@ -359,6 +359,7 @@ padding-top: 50px;
 padding-left: 250px;
 padding-right: 250px;
 margin-bottom:200px;
+
 }
 .h2contact{
   font-size: 70px;
@@ -381,4 +382,7 @@ margin-bottom:200px;
 
 /* .imgine-pluseperience{
   
+  Phone: luntras fineas
++ 734 545  2883
+
 } */
